2012-03-20 Emilie Sagniez <emilie@in-cite.net>
	* Change to version 1.0.0

2012-02-20 Emilie Sagniez <emilie@in-cite.net>
	* Add Typoscript Configuration

... Missing changes ...

2011-06-20 In Cité Solution  <technique@in-cite.net>
	* initial code generated with kickstarter